# kirigami-tutorial-issue

./: CMakeLists.txt  org.kde.tutorial.desktop
.github/workflows/: test.yaml
src/: CMakeLists.txt  Main.qml  main.cpp
